<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/settings_user_data">
        <EditTextPreference
            android:title="@string/settings_username"
            android:key="username" >
        </EditTextPreference>
        <EditTextPreference
            android:title="@string/settings_email"
            android:key="email" >
        </EditTextPreference>
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/settings_job" >
        <ListPreference
            android:title="@string/settings_job"
            android:entries="@array/jobs"
            android:entryValues="@array/jobs"
            android:key="job" >
        </ListPreference>
    </PreferenceCategory>
    

</PreferenceScreen>