<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- NAME -->
    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/contact_hint_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <!-- SEPERATOR -->
    <TextView
        android:id="@+id/txt_seperator_contact"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_below="@+id/txt_name"
        android:layout_marginTop="24dp"
        android:text="@string/contact_seperator_contact" />

    <!-- PHONE -->
    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_name"
        android:layout_below="@+id/txt_seperator_contact"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/contact_hint_phone"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/spinnerPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_phone"
        android:layout_toRightOf="@+id/txt_phone" />

    <!-- EMAIL-->
    <EditText
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_phone"
        android:layout_below="@+id/txt_phone"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/contact_hint_email"
        android:inputType="textEmailAddress" />

    <Spinner
        android:id="@+id/spinnerEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_email"
        android:layout_toRightOf="@+id/txt_email" />

    <!-- ADDRESS-->

    <TextView
        android:id="@+id/txt_seperator_address"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_below="@+id/txt_email"
        android:layout_marginTop="24dp"
        android:text="@string/contact_seperator_address" />

    <EditText
        android:id="@+id/txt_address_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_email"
        android:layout_below="@+id/txt_seperator_address"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/contact_hint_address_street"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/txt_address_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_address_street"
        android:layout_alignBottom="@+id/txt_address_street"
        android:layout_alignLeft="@+id/spinnerEmail"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/contact_hint_address_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/txt_address_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_email"
        android:layout_below="@+id/txt_address_street"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/contact_hint_address_city"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/txt_address_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt_address_city"
        android:layout_alignBottom="@+id/txt_address_street"
        android:layout_alignLeft="@+id/txt_address_number"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/contact_hint_address_zip"
        android:inputType="number" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_address_city"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/contact_btn_add"
        android:onClick="addContact" />

</RelativeLayout>